<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_above="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="4dp">


        <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutvehicleNo"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/VehicleNumber">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vehicleNo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutvehicleMake"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginBottom="16dp"
        android:hint="@string/VehicleMake">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vehicleMake"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutvehicleModel"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/VehicleModel">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vehicleModel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutvehicleVariant"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/VehicleVariant">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vehicleVariant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutvehicleFuelType"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:hint="@string/VehicleFuelType">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/vehicleFuelType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </com.google.android.material.textfield.TextInputLayout>

       <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/VehiclePhoto"
        android:layout_margin="10dp"/>

        <ImageView
            android:id="@+id/vehiclePhoto"
            android:layout_width="match_parent"
            android:layout_height="256dp"
            android:layout_gravity="start"
            android:src="@drawable/ic_baseline_add_a_photo_24"
            android:background="@android:drawable/picture_frame"
            android:layout_margin="4dp"/>


        <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text='@string/submit'
        android:layout_margin="46dp"
        android:background="@color/blue"
         />

    </LinearLayout>
</ScrollView>
        <include
            layout="@layout/footer"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content"
            android:layout_width="match_parent" />
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>